[project]
name = "docs-validator"
version = "0.0.1"
requires-python = ">=3.13"
readme = "README.md"
keywords = ["documentation", "links", "validator", "markdown"]
dependencies = [
    "networkx==3.6.1",
    "requests==2.34.2",
    "PyYAML == 6.0.3",
    "beautifulsoup4==4.15.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "coverage==7.13.5",
    "iniconfig==2.3.0",
    "packaging==26.1",
    "pluggy==1.6.0",
    "Pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "responses==0.26.1",
    "pytest-mock==3.15.1",
]

[project.scripts]
docs-validator = "validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-vv",
    "--tb=short",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]